--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
     "vue-router": "^3.5.2",
-    "vue-swal": "^1.0.0"
+    "vue-swal": "^1.0.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
